--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="about-column-2">
                 <h1 class="sub-title"> About Me</h1>
-                <p>hi there! my name is john and i'm currently a first-year computer science + business student @ ubc! i have a passion for almost about anything cs and business related with my current interests leading me to AI/ML, cloud computing, cypersecurity and stocks!<br> <br> i am currently also looking for winter and summer 2025 internships for software development or product manager! </p>
+                <p>Hi there! My name is John and I'm currently a first-year computer science + business student @ UBC! I have a passion for almost about anything cs and business related with my current interests leading me to AI/ML, cloud computing, cypersecurity and stocks!<br> <br> I am currently also looking for winter and summer 2025 internships for software development or product manager! </p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
                     <p class="tab-links" onclick="opentab('education')">Education </p>
@@ -47,7 +47,10 @@
 
                 <div class="tab-contents active-tab" id="experience">
                     <ul>
-                        <li><span>Sept 2023 - Apr 2024</span><br>First Year Representative | BUCS Community</li>
+                        <li><span>Apr 2024 - Present</span><br>Web Developer | UBC BEST</li>
+                        <li><span>Apr 2024 - Present</span><br>Partnerships Director | UBC BizTech</li>
+                        <li><span>Mar 2024 - Present</span><br>Co-Chair | BUCS Community</li>
+                        <li><span>Sept 2023 - Mar 2024</span><br>First Year Representative| BUCS Community</li>
                         <li><span>Summer 2023</span><br>Training Officer | Department of National Defense</li>
                         <li><span>Summer 2022</span><br>Information Technology Internship | Department of National Defense</li>
                     </ul>
@@ -198,7 +201,7 @@
             setTimeout(function(){
                 msg.innerHTML = ""
             },5000)
-            form.reset
+            form.reset()
         })
         .catch(error => {
             msg.innerHTML = "Message failed to send."
