Updated with projects

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="about-column-2">
                 <h1 class="sub-title"> About Me</h1>
-                <p>Hi there! My name is John and I'm currently a first-year computer science + business student @ UBC! I have a passion for almost about anything cs and business related with my current interests leading me to AI/ML, cloud computing, cypersecurity and stocks!<br> <br> I am currently also looking for winter and summer 2025 internships for software development or product manager! </p>
+                <p>Hi there! My name is John and I'm currently a first-year Computer Science + Business student @ UBC!<br><br>I have a passion for almost about anything business and cs related with my current interests leading me to AI/ML, cloud computing, cypersecurity and the stock market!<br> <br> I am currently also looking for winter and summer 2025 internships for software development. </p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
                     <p class="tab-links" onclick="opentab('education')">Education </p>
@@ -47,18 +47,21 @@
 
                 <div class="tab-contents active-tab" id="experience">
                     <ul>
-                        <li><span>Apr 2024 - Present</span><br>Web Developer | UBC BEST</li>
-                        <li><span>Apr 2024 - Present</span><br>Partnerships Director | UBC BizTech</li>
-                        <li><span>Mar 2024 - Present</span><br>Co-Chair | BUCS Community</li>
-                        <li><span>Sept 2023 - Mar 2024</span><br>First Year Representative| BUCS Community</li>
-                        <li><span>Summer 2023</span><br>Training Officer | Department of National Defense</li>
-                        <li><span>Summer 2022</span><br>Information Technology Internship | Department of National Defense</li>
+                        <li><span><strong>Apr 2024 - Present</strong></span><br>Frontend Developer | UBC BEST</li>
+                        <br>
+                        <li><span><strong>Apr 2024 - Present</strong></span><br>Partnerships Director | UBC BizTech</li>
+                        <br>
+                        <li><span><strong>Mar 2024 - Present</strong></span><br>Co-Chair | BUCS Community</li>
+                        <br>
+                        <li><span><strong>Summer 2023</strong></span><br>Training Operations Intern| Department of National Defense</li>
+                        <br>
+                        <li><span><strong>Summer 2022</strong></span><br>Informational Technology Intern | Department of National Defense</li>
                     </ul>
                 </div>
 
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2027</span><br>Combined Major in Computer Science and Business</li>
+                        <li><span><strong>2023 - 2027</strong></span><br>Computer Science and Business Combined Major</li>
                     </ul>
                 </div>
             </div>
@@ -67,39 +70,39 @@
     </div>
 </div>
 <!----------------------- PORTFOLIO -------------------------->
-<!--
+
 <div id="portfolio">
     <div class="container">
-        <h1 class="sub-title">My Work</h1>
+        <h1 class="sub-title">Projects</h1>
         <div class="worklist">
             <div class="work">
-                <img src="images/work-1.png">
+                <img class="project-img" src="images/stock.jpg">
                 <div class="layer">
-                    <h3>Social Media</h3>
-                    <p>The app connects you to the talented people around the world. Download it from the play store.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h2><strong>Stock Simulation</strong></h2>
+                    <p>Stock simulation using Object Oriented Programming with Java. Idea based on the Rotman Interactive Trader.</p>
+                    <a href="https://github.com/jjohngrey/Stock-Market-Simulation"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-2.png">
+                <img class="project-img" src="images/spotify.png">
                 <div class="layer">
-                    <h3>Music App</h3>
-                    <p>The app connects you to the talented people around the world. Download it from the play store.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h2><strong>Spotify Clone</strong></h2>
+                    <p>Spotify clone built from Typescript, Tailwind, Next.js, with Supabase backend and Stripe payment integration. </p>
+                    <a href="https://spotify-clone-git-main-jjohngreys-projects.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
-            <div class="work">
+            <!-- <div class="work">
                 <img src="images/work-3.png">
                 <div class="layer">
-                    <h3>Online Shopping Media</h3>
+                    <h2>Online Shopping Media</h2>
                     <p>The app connects you to the talented people around the world. Download it from the play store.</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
--->
+
 <!----------------------- Blog -------------------------->
 <!--
 <div id="blog">
@@ -139,7 +142,7 @@
                 <div class="social-icons">
                     <p><a href="www.linkedin.com/in/john-grey"><i class="fa-brands fa-linkedin"></i></a>linkedin.com/in/john-grey</p>
                 </div>
-                <a href="images/Resume_24MAR17.pdf" download class="btn btn2">Download Resume</a>
+                <a href="images/John_Grey_Resume copy.pdf" download class="btn btn2">Download Resume</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
