--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="about-column-2">
                 <h1 class="sub-title"> About Me</h1>
-                <p>Hi there! My name is John and I'm currently a first-year Computer Science + Business student @ UBC!<br><br>I have a passion for almost about anything business and cs related with my current interests leading me to AI/ML, cloud computing, cypersecurity and the stock market!<br> <br> I am currently also looking for winter and summer 2025 internships for software development. </p>
+                <p>Hi there! My name is John and I'm currently a second-year Computer Science + Business student @ UBC!<br><br>I have a passion for almost about anything business and cs related with my current interests leading me to AI/ML, cloud computing, cypersecurity and the stock market!<br> <br> I am currently also looking for winter and summer 2025 internships for software development. </p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
                     <p class="tab-links" onclick="opentab('education')">Education </p>
